--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Northwest Jobs</title>
   <link href="css/styles.css" rel="stylesheet" type="text/css" />
+
 </head>
 
 <body>
@@ -30,8 +31,8 @@
         <ul>
           
           <li><a href="https://www.facebook.com/Jobs-Northwest-299673893391099/"><img src="images/facebook.png" alt="" /></a></li>
-          <li><a href="#"><img src="images/twwtter.png" alt="" /></a></li>
-          <li><a href="#"><img src="images/linkedin.png" alt="" /></a></li>
+          <li><a href="https://twitter.com/IT_NorthWest"><img src="images/twwtter.png" alt="" /></a></li>
+          <li><a href="https://www.linkedin.com/company/northwest-it-jobs/"><img src="images/linkedin.png" alt="" /></a></li>
         </ul>
       </div>
     </div>
@@ -66,7 +67,11 @@
     </div>
   </div>
   <!---banner-wrap-End--->
-  
+  <div class="footer">
+    <p>Northwest Missouri State University
+      800 University Drive | Maryville, MO 64468
+      660.562.1212 | www.nwmissouri.edu</p>
+  </div>
 </body>
 
 </html>
