--- a/Login.html
+++ b/Login.html
@@ -278,8 +278,8 @@ form:after {
 				<ul>
 					
 					<li><a href="https://www.facebook.com/Jobs-Northwest-299673893391099/"><img src="images/facebook.png" alt="" /></a></li>
-					<li><a href="#"><img src="images/twwtter.png" alt="" /></a></li>
-					<li><a href="#"><img src="images/linkedin.png" alt="" /></a></li>
+					<li><a href="https://twitter.com/IT_NorthWest"><img src="images/twwtter.png" alt="" /></a></li>
+					<li><a href="https://www.linkedin.com/company/northwest-it-jobs/"><img src="images/linkedin.png" alt="" /></a></li>
 				</ul>
 			</div>
 		</div>
@@ -340,7 +340,11 @@ form:after {
 			</div>
 		</div>
 	</div>
-	
+	<div class="footer">
+		<p>Northwest Missouri State University
+		  800 University Drive | Maryville, MO 64468
+		  660.562.1212 | www.nwmissouri.edu</p>
+	  </div>
 </body>
 
 </html>
