--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
         <ul>
          
           <li><a href="https://www.facebook.com/Jobs-Northwest-299673893391099/"><img src="images/facebook.png" alt="" /></a></li>
-          <li><a href="#"><img src="images/twwtter.png" alt="" /></a></li>
-          <li><a href="#"><img src="images/linkedin.png" alt="" /></a></li>
+          <li><a href="https://twitter.com/IT_NorthWest"><img src="images/twwtter.png" alt="" /></a></li>
+          <li><a href="https://www.linkedin.com/company/northwest-it-jobs/"><img src="images/linkedin.png" alt="" /></a></li>
         </ul>
       </div>
     </div>
