--- a/job.html
+++ b/job.html
@@ -56,8 +56,8 @@ tr:nth-child(even) {background-color: #f2f2f2;}
 				<ul>
 					
 					<li><a href="https://www.facebook.com/Jobs-Northwest-299673893391099/"><img src="images/facebook.png" alt="" /></a></li>
-					<li><a href="#"><img src="images/twwtter.png" alt="" /></a></li>
-					<li><a href="#"><img src="images/linkedin.png" alt="" /></a></li>
+					<li><a href="https://twitter.com/IT_NorthWest"><img src="images/twwtter.png" alt="" /></a></li>
+					<li><a href="https://www.linkedin.com/company/northwest-it-jobs/"><img src="images/linkedin.png" alt="" /></a></li>
 				</ul>
 			</div>
 		</div>
@@ -138,7 +138,11 @@ tr:nth-child(even) {background-color: #f2f2f2;}
 			</div>
 		</div>
 	</div>
-	
+	<div class="footer">
+		<p>Northwest Missouri State University
+		  800 University Drive | Maryville, MO 64468
+		  660.562.1212 | www.nwmissouri.edu</p>
+	  </div>
 		
 	
 </body>
