--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Northwest Jobs</title>
+  <title img src="images/university.jpg" width="50px">Northwest Jobs</title>
   <link href="css/styles.css" rel="stylesheet" type="text/css" />
 
 </head>
