--- a/Register.html
+++ b/Register.html
@@ -259,11 +259,20 @@ form:after {
 </head>
 
 <body>
-
-		<div class="header-wrap">
-				<div class="panel marRight30">
-					<img src="images/logoa.png" alt="logo" >
-				</div>
+		<br>
+		<div class="topnav" style="padding-left:130px">
+      
+				<a ><img src="images/logo.png" alt="logo" width="80px"></a>
+				<a href="about.html" class="active"><i class="fa fa-fw fa-home"></i>Home</a>
+				<a href="Login.html"><i class="fa fa-fw fa-user"></i>Login</a>
+				<a href="contact.html"><i class="fa fa-fw fa-envelope"></i>contact</a>
+				<a href="admin.html"><i class="fas fa-user-edit"></i>Admin</a>
+				<a style="float:right" href="https://www.facebook.com/Jobs-Northwest-299673893391099/"><img src="images/facebook.png" alt="" /></a>
+				<a style="float:right" href="https://twitter.com/IT_NorthWest"><img src="images/twwtter.png" alt="" /></a>
+				<a style="float:right" href="https://www.linkedin.com/company/northwest-it-jobs/"><img src="images/linkedin.png" alt="" /></a>
+			  
+		  </div>
+		
 			
 		<!---header-wrap-End--->
 		
