--- a/adminaccount.html
+++ b/adminaccount.html
@@ -367,7 +367,7 @@ tr:nth-child(even) {background-color: #f2f2f2;}
                                 </tr>
                             </tbody>
                         </table><br>
-                        <button type="button" onclick="back()" style="background-color:green">Back</button>
+                        <button type="button" onclick="back()" style="background-color:#0040ff">Back</button>
                     </div>
                     <script>
                         function login() {
@@ -390,7 +390,19 @@ tr:nth-child(even) {background-color: #f2f2f2;}
             </div>
         </div>
     </div>
-
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<div class="footer">
+		<p>Northwest Missouri State University
+		  800 University Drive | Maryville, MO 64468
+		  660.562.1212 | www.nwmissouri.edu</p>
+	  </div>
 </body>
 
 </html>
