--- a/adminnav.html
+++ b/adminnav.html
@@ -331,7 +331,28 @@ button{
 			</div>
     </div>
   </div>
-  
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="footer">
+	  <p>Northwest Missouri State University
+		800 University Drive | Maryville, MO 64468
+		660.562.1212 | www.nwmissouri.edu</p>
+	</div>
 </body>
 
 </html>
