--- a/job.html
+++ b/job.html
@@ -26,6 +26,16 @@ td {
 }
 
 tr:nth-child(even) {background-color: #f2f2f2;}
+button{
+	 width: auto;
+	 color: white;
+     border: black; 
+     padding: 10px 22px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+ } 
     </style>
 </head>
 
@@ -97,7 +107,7 @@ tr:nth-child(even) {background-color: #f2f2f2;}
 				</div>
 			</div>
 			<div class="rightcol">
-				<button type="button" onclick="logout()">Log out</button>
+				<button type="button" style="background-color:#004a80" onclick="logout()">Log out</button>
 				<script>
 					function logout() {
 						alert('Successfully log out');
@@ -119,6 +129,14 @@ tr:nth-child(even) {background-color: #f2f2f2;}
 			</div>
 		</div>
 	</div>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
 	<div class="footer">
 		<p>Northwest Missouri State University
 		  800 University Drive | Maryville, MO 64468
