--- a/admindeletejobs.html
+++ b/admindeletejobs.html
@@ -90,7 +90,7 @@ button{
 									<td>Not Displayed</td>
                                     <td>December 15, 2018</td>
                                     <td><button class="d1 btn btn-danger" type="button" >Delete</button></td>
-                                    <td><button class="u1" type="button">Update</button></td>
+                                    <td><button class="u1 btn btn-success" type="button">Update</button></td>
 								</tr>
 								<tr class="2">
 									<td><u><a onclick="nav2()">Football Sports Manager, Athletics</u></p>
