--- a/admindeletejobs.html
+++ b/admindeletejobs.html
@@ -89,7 +89,7 @@ button{
 									<td>Student</td>
 									<td>Not Displayed</td>
                                     <td>December 15, 2018</td>
-                                    <td><button class="d1 btn btn-danger" type="button" >Delete</button></td>
+                                    <td><button class="d1 btn btn-danger" type="button" onclick="confirm('Are you sure want to delete?')" >Delete</button></td>
                                     <td><button class="u1 btn btn-success" type="button">Update</button></td>
 								</tr>
 								<tr class="2">
@@ -98,7 +98,7 @@ button{
 									<td>Student</td>
 									<td>Not Displayed</td>
                                     <td>December 28, 2018</td>
-                                    <td><button class="d2 btn btn-danger" type="button" >Delete</button></td>
+                                    <td><button class="d2 btn btn-danger" type="button" onclick="confirm('Are you sure want to delete?')" >Delete</button></td>
                                     <td><button class="u2 btn btn-success" type="button">Update</button></td>
                                 </tr>
 								<tr class="3">
@@ -107,7 +107,7 @@ button{
 									<td>Student</td>
 									<td>Not Displayed</td>
                                     <td>December 19, 2018</td>
-                                    <td><button class="d3 btn btn-danger" type="button" >Delete</button></td>
+                                    <td><button class="d3 btn btn-danger" type="button" onclick="confirm('Are you sure want to delete?')">Delete</button></td>
                                     <td><button class="u3 btn btn-success" type="button">Update</button></td>
                                 </tr>
 								<tr class="4">
@@ -115,7 +115,7 @@ button{
 									<td>Student</td>
 									<td>Not Displayed</td>
                                     <td> December 21, 2018</td>
-                                    <td><button class="d4 btn btn-danger" type="button" >Delete</button></td>
+                                    <td><button class="d4 btn btn-danger" type="button" onclick="confirm('Are you sure want to delete?')">Delete</button></td>
                                     <td><button class="u4 btn btn-success" type="button">Update</button></td>
                                 </tr>
 							</tbody>
