fix professor details

--- a/adminaccount.html
+++ b/adminaccount.html
@@ -347,25 +347,25 @@ tr:nth-child(even) {background-color: #f2f2f2;}
                                     <td>Johnsmith</td>
                                     <td><u style="text-color:blue;"> John.smith@gmail.com</u></td>
                                     <td>919559567</td>
-                                    <td><button class="d1 btn btn-danger" type="button" >Delete</button></td>
+                                    <td><button class="d1 btn btn-danger" type="button" onclick="confirm('Are you sure want to delete?')">Delete</button></td>
                                 </tr>
                                 <tr class="2">
                                     <td>Jameshenry</td>
                                     <td><u style="text-color:blue;"> henry.james@gmail.com</u></td>
                                     <td>919553456</td>
-                                    <td><button class="d2 btn btn-danger" type="button" >Delete</button></td>
+                                    <td><button class="d2 btn btn-danger" type="button" onclick="confirm('Are you sure want to delete?')">Delete</button></td>
                                 </tr>
                                 <tr class="3">
                                     <td>Harryporter</td>
                                     <td><u style="text-color:blue;"> Harry.porter@gmail.com</u></td>
                                     <td>919559567</td>
-                                    <td><button class="d3 btn btn-danger" type="button" >Delete</button></td>
+                                    <td><button class="d3 btn btn-danger" type="button" onclick="confirm('Are you sure want to delete?')">Delete</button></td>
                                 </tr>
                                 <tr class="4">
                                     <td>bearcat</td>
                                     <td><u style="text-color:blue;"> bearcat@gmail.com</u></td>
                                     <td>919555555</td>
-                                    <td><button  class="d4 btn btn-danger" type="button" >Delete</button> </td>
+                                    <td><button  class="d4 btn btn-danger" type="button" onclick="confirm('Are you sure want to delete?')">Delete</button> </td>
                                 </tr>
                             </tbody>
                         </table><br>
