--- a/job.html
+++ b/job.html
@@ -5,7 +5,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Northwet Jobs</title>
 	<link href="css/styles.css" rel="stylesheet" type="text/css" />
-	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<style>
 		table {
   border-collapse: collapse;
@@ -107,7 +109,7 @@ button{
 				</div>
 			</div>
 			<div class="rightcol">
-				<button type="button" style="background-color:#004a80" onclick="logout()">Log out</button>
+				<button class="btn btn-primary" type="button"  onclick="logout()">Log out</button>
 				<script>
 					function logout() {
 						alert('Successfully log out');
