--- a/adminnav.html
+++ b/adminnav.html
@@ -5,6 +5,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Northwet Jobs</title>
   <link href="css/styles.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
     body {
 	
@@ -308,7 +311,7 @@ button{
               </div>
                         <div class="vertical-menu">
 								<a href="adminaccount.html" >Accounts</a>
-								<a href="adminjobportal.html">Job Portal</a>
+								<a href="adminjobportal.html">Publish new job</a>
 								<a href="admindeletejobs.html">Update/Delete Jobs</a>
 							  </div>
                   
@@ -327,13 +330,10 @@ button{
 
 	  </div>
 	  <div class="rightcol">
-			<button type="button" style="background-color:#004a80" onclick="logout()">Log out</button>
+			<button type="button" class="btn btn-primary" onclick="logout()">Log out</button>
 			</div>
     </div>
   </div>
-  <br>
-  <br>
-  <br>
   <br>
   <br>
   <br>
