--- a/admindeletejobs.html
+++ b/admindeletejobs.html
@@ -129,15 +129,15 @@ button{
 												<div class="modal-body">
 													<form>
 														<div class="form-group">
-															<label for="recipient-name" class="col-form-label">Emp.type</label>
+															<label for="recipient-name" class="col-form-label">Emp.type :</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 															<input type="text" id="mysal" value="Student">
 														</div>
 														<div class="form-group">
-															<label for="message-text" class="col-form-label">Salary</label>
+															<label for="message-text" class="col-form-label">Salary :</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 															<input type="text" id="mysal" value="Not Displayed">
 														</div>
 														<div class="form-group">
-															<label for="message-text" class="col-form-label">Closing Date</label>
+															<label for="message-text" class="col-form-label">Closing Date : </label>
 															<input type="month" id="myMonth" value="2018-12">
 														</div>
 													</form>
