--- a/job.html
+++ b/job.html
@@ -119,13 +119,13 @@ button{
 						window.location = "job1.html";
 					}
 					function nav2() {
-						window.location = "about.html";
+						window.location = "job1.html";
 					}
 					function nav3() {
-						window.location = "about.html";
+						window.location = "job1.html";
 					}
 					function nav4() {
-						window.location = "about.html";
+						window.location = "job1.html";
 					}
 				</script>
 			</div>
