--- a/admindeletejobs.html
+++ b/admindeletejobs.html
@@ -106,7 +106,7 @@ button{
 									<td><u><a onclick="nav3()">Office Assistant, Wellness Services</u></p>
 									</td>
 									<td>Student</td>
-									<td>Not Displayed</td>
+									<td id="salary">Not Displayed</td>
 									<td id="date">December 19, 2018</td>
 									<td><button class="d3 btn btn-danger" type="button" onclick="confirm('Are you sure want to delete?')">Delete</button></td>
 
@@ -179,6 +179,10 @@ button{
 					var str = document.getElementById("date").innerHTML;
 					var res = str.replace("December 19, 2018", "January 10, 2019");
 					document.getElementById("date").innerHTML = res;
+
+					var ste = document.getElementById("salary").innerHTML;
+					var resl = ste.replace("Not Displayed", "$ 7.45");
+					document.getElementById("salary").innerHTML = resl;
 				}
 				$(document).ready(function () {
 					$(".d1").click(function () {
