--- a/adminjobportal.html
+++ b/adminjobportal.html
@@ -157,7 +157,7 @@ button{
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-						<button class="btn btn-primary">Publish</button>
+						<button class="btn btn-primary" onclick="publish()">Publish</button>
 
 					</div>
 				</div>
@@ -195,6 +195,10 @@ button{
 						cell2.innerHTML = "Student";
 						cell3.innerHTML = "$ 7.3";
 						cell4.innerHTML = "December 25, 2019";
+					}
+					function publish(){
+						window.location="adminnav.html";
+						window.alert("Job Posted Succesfully");
 					}
 				</script>
 			</div>
