--- a/adminaccount.html
+++ b/adminaccount.html
@@ -316,7 +316,7 @@ tr:nth-child(even) {background-color: #f2f2f2;}
 				<a ><img src="images/logo.png" alt="logo" width="80px"></a>
 				<a href="about.html" class="active"><i class="fa fa-fw fa-home"></i>Home</a>
 				<a href="Login.html"><i class="fa fa-fw fa-user"></i>Login</a>
-				<a href="contact.html"><i class="fa fa-fw fa-envelope"></i>contact</a>
+				<a href="contact.html"><i class="fa fa-fw fa-envelope"></i>Contact</a>
 				<a href="admin.html"><i class="fas fa-user-edit"></i>Admin</a>
 				<a style="float:right" href="https://www.facebook.com/Jobs-Northwest-299673893391099/"><img src="images/facebook.png" alt="" /></a>
 				<a style="float:right" href="https://twitter.com/IT_NorthWest"><img src="images/twwtter.png" alt="" /></a>
