Fix contact page

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                   <input type="text" class="input_text" name="subject" id="subject" />
                 </label>
                 <label> <span>Message</span>
-                  <textarea class="message" name="feedback" id="feedback"></textarea><br><br><br>
+                  <textarea class="message" name="feedback" id="feedback"></textarea><br><br><br>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
                   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
                       Submit 
                     </button>
