--- a/admindeletejobs.html
+++ b/admindeletejobs.html
@@ -159,6 +159,15 @@ button{
 									<td><button class="d4 btn btn-danger" type="button" onclick="confirm('Are you sure want to delete?')">Delete</button></td>
 									<td><button class="u4 btn btn-success" type="button">Update</button></td>
 								</tr>
+								<tr class="5">
+										<td><u><a onclick="nav4()">Teaching Assistant, Computer Science</u></p>
+										</td>
+										<td>Student</td>
+										<td>$ 7.3</td>
+										<td> December 25, 2019</td>
+										<td><button class="d4 btn btn-danger" type="button" onclick="confirm('Are you sure want to delete?')">Delete</button></td>
+										<td><button class="u4 btn btn-success" type="button">Update</button></td>
+									</tr>
 							</tbody>
 						</table><br>
 						<button class="btn btn-primary" type="button" onclick="back()">Back</button>
