--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
       <div class="leftcol">
         <div class="panel">
           <div class="title">
-            <h1 style="color:black">Contact </h1>
+            <h3 style="color:black">CONTACT</h3>
             <span>Drop us a line.</span>
           </div>
           <div class="panel">
