--- a/Login.html
+++ b/Login.html
@@ -38,8 +38,9 @@ form:after {
 	clear: both;
 	visibility: hidden;
 }
-.container { margin: 25px auto; position: relative; width: 900px; }
+.container { 	float: left; margin: 25px auto; position: relative; width: 700px; }
 #content {
+
 	background: #f9f9f9;
 	background: -moz-linear-gradient(top,  rgba(248,248,248,1) 0%, rgba(249,249,249,1) 100%);
 	background: -webkit-linear-gradient(top,  rgba(248,248,248,1) 0%,rgba(249,249,249,1) 100%);
@@ -234,7 +235,7 @@ form:after {
 	padding: 15px 0;
 }
 .button a {
-	background: url(https://cssdeck.com/uploads/media/items/8/8bcLQqF.png) 0 -112px no-repeat;
+	background: white;
 	color: #7E7E7E;
 	font-size: 17px;
 	padding: 2px 0 2px 40px;
