Fix apply job portal

--- a/Register.html
+++ b/Register.html
@@ -291,7 +291,8 @@ form:after {
 					<div class="container">
 						<section id="content">
 							<form action="">
-								<h1>Register Form</h1>
+                                <h1>Register Form</h1>
+                                <p>Please fill out all the fields*</p>
 								<div>
 									<input type="text" placeholder="Username" name="a" required="" id="username" />
 								</div>
