--- a/job1.html
+++ b/job1.html
@@ -164,14 +164,14 @@ button{
 
                             </table>
                             <table width="100%" border="0" cellspacing="0" cellpadding="0" summary="">
-                                <thead>
-                                    <tr>
-                                        <th>
-                                            <p>Job Description:</p>
-                                        </th>
-                                    </tr>
-                                </thead>
+                                
                                 <tbody>
+                                        <tr>
+                                                <td class="jobdetail" headers="viewJobDescription"><strong><u>Job Description:
+                                                            </u></strong><strong>&nbsp;
+                                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                    </strong><br>Responsibilities include lecturing; preparing course materials and exams, grading assignments and exams, proctoring exams, preparing and posting grades, holding regularly scheduled office hours and providing individual and/or group assistance to students, performing other course-related duties. <br></td>
+                                            </tr>
 
                                     <tr>
                                         <td class="jobdetail" headers="viewJobDescription"><strong><u>Purpose of
