--- a/job1.html
+++ b/job1.html
@@ -27,7 +27,6 @@ td {
   text-align: left;
 }
 
-tr:nth-child(even) {background-color: #f2f2f2;}
 button{
 	 width: auto;
 	 color: white;
@@ -109,7 +108,7 @@ button{
 
                                         <td>
 
-                                            &nbsp;
+                                           
                                             Mon. 12/03/18 12:00 AM Central Time
                                         </td>
 
@@ -169,7 +168,7 @@ button{
                                                 <td class="jobdetail" headers="viewJobDescription"><strong><u>Job Description:
                                                             </u></strong><strong>&nbsp;
                                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                                    </strong><br>Responsibilities include lecturing; preparing course materials and exams, grading assignments and exams, proctoring exams, preparing and posting grades, holding regularly scheduled office hours and providing individual and/or group assistance to students, performing other course-related duties. <br></td>
+                                                    </strong><br><p style="text-align:justify">Responsibilities include lecturing; preparing course materials and exams, grading assignments and exams, proctoring exams, preparing and posting grades, holding regularly scheduled office hours and providing individual and/or group assistance to students, performing other course-related duties. <br></p></td>
                                             </tr>
 
                                     <tr>
