--- a/job1apply.html
+++ b/job1apply.html
@@ -10,6 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
         table {
+            background-color: lightgrey;
   border-collapse: collapse;
   width: 100%;
 }
@@ -27,7 +28,7 @@ td {
   text-align: left;
 }
 
-tr:nth-child(even) {background-color: #f2f2f2;}
+
 button{
 	 width: auto;
 	 color: white;
